--- a/B_Versionierung_Git_C_Uebung/app/src/main/AndroidManifest.xml
+++ b/B_Versionierung_Git_C_Uebung/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.b_versionierung_git_c_uebung">
 
     <application
@@ -8,7 +9,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".Tabellen"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -19,4 +21,6 @@
         </activity>
     </application>
 
+    <uses-permission android:name="android.permission.ACCESS.FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 </manifest>
