--- a/B_Versionierung_Git_C_Uebung/app/src/main/AndroidManifest.xml
+++ b/B_Versionierung_Git_C_Uebung/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Tabellen"></activity>
+        <activity android:name=".Tabellen">
+
+        </activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,5 +20,6 @@
             </intent-filter>
         </activity>
     </application>
-
+<uses-permission android:name="android.permission.ACCESS.FINE_LOCATION" />
+<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 </manifest>
